* Improvement: Design enhancements for default post showcase display.
* Improvement: Design enhancements for Magnific Popup lightbox navigation.
* Improvement: Design enhancements to Divider element.
* Improvement: Design enhancements to Progress Bars element.
* Improvement: Design enhancements to Milestone element.
* Improvement: Design enhancements to Milestone Ring element.
* Improvement: Better mobile fallback for parallax background images.
* Improvement: Redesign of Team Member element.
* Improvement: With a hero unit, when selecting to bold text, a header tag will now be used, allowing for more flexibility in fonts used.
* Improvement: Added option to shade slider images for overlaid text readability; this applies to post slider and simple slider elements.
* Improvement: When inputting a specific list of pages for post element query, you can now use slugs for pages, posts, and portfolio items.
* Improvement: When selecting for a post grid element to "popout" in builder, there is now padding to separate from the browser edge.
* Improvement: More default spacing between elements in custom layouts.
* Updated: FontAwesome to 4.5.
* Updated: FlexSlider to 2.6.
* Fixed: Sticky menu logo shouldn't get `srcset` from main header logo.
* Fixed: Sticky menu shouldn't display on any mobile device, no matter the viewport size.
* Fixed: Accordion feature not working with Toggles element of Layout Builder.
* Fixed: When setting an element to pull from a list of pages, the total number of pages returned shouldn't be interfered with.
* Fixed: Contact Bar element was outputting the set of icons twice.
* Fixed: SPAN HTML tags showing in texture browser.
* Fixed: When `themeblvd_tabs_deep_linking` is filtered to true, tab content wasn't changing properly.
* Fixed: Post showcase and grid display for archives not always applying the correct posts per page amount from Theme Options.
* Fixed: Funky display issue on WooCommerce product reviews.
* Fixed: More minor RTL bug fixes.